bluec-tests/tests/invalid/types_fn_pointer/assign_int_var_to_fn_pointer.c
int main(void)
{
    int x = 0;
    int (*fn)(void) = x;
}